<?xml version="1.0" encoding="UTF-8"?>
<project name="javaLauncher" default="default" basedir=".">

  <property environment="env"/>
  <condition property="out.path" value="${env.OUT_PATH}" else="out/classes">
    <isset property="env.OUT_PATH"/>
  </condition>
  <condition property="out.name" value="${env.OUT_NAME}" else="jcef_app">
    <isset property="env.OUT_NAME"/>
  </condition>
  <condition property="out.id" value="${env.OUT_ID}" else="org.jcef.jcef">
    <isset property="env.OUT_ID"/>
  </condition>
  <condition property="out.mainclass" value="${env.OUT_MAINCLASS}" else="tests.detailed.MainFrame">
    <isset property="env.OUT_MAINCLASS"/>
  </condition>

  <taskdef name="bundleapp"
      classname="com.oracle.appbundler.AppBundlerTask"
      classpath="third_party/appbundler/appbundler-1.0.jar"/>

  <path id="production.class.path">
    <fileset dir="third_party/jogamp/jar">
      <include name="gluegen-rt.jar"/>
      <include name="jogl-all.jar"/>
    </fileset>
  </path>

  <path id="test.class.path">
    <path refid="production.class.path"/>
    <fileset dir="third_party/junit" includes="junit-platform-console-standalone-6.1.2.jar"/>
  </path>

  <target name="check-java">
    <condition property="java.version.supported">
      <equals arg1="${ant.java.version}" arg2="17"/>
    </condition>
    <fail unless="java.version.supported" message="JDK 17 is required; Ant is running on Java ${ant.java.version}. Set JAVA_HOME to a JDK 17 installation."/>
  </target>

  <target name="compile" depends="check-java">
    <mkdir dir="${out.path}"/>
    <javac encoding="UTF-8" nowarn="on" deprecation="off" debug="on" includeantruntime="false" destdir="${out.path}"
           fork="true" executable="${java.home}/bin/javac" memoryinitialsize="64m" memorymaximumsize="512m"
           release="17">
      <classpath refid="production.class.path"/>
      <src path="java/org/cef"/>
    </javac>
    <mkdir dir="${out.path}/manifest"/>
    <copy file="java/manifest/MANIFEST.MF" todir="${out.path}/manifest"/>
  </target>

  <target name="compile-samples" depends="compile">
    <javac encoding="UTF-8" nowarn="on" deprecation="off" debug="on" includeantruntime="false" destdir="${out.path}"
           fork="true" executable="${java.home}/bin/javac" memoryinitialsize="64m" memorymaximumsize="512m"
           release="17">
      <classpath location="${out.path}"/>
      <classpath refid="production.class.path"/>
      <src path="java/tests"/>
      <include name="detailed/**/*.java"/>
      <include name="simple/**/*.java"/>
    </javac>
    <copy todir="${out.path}">
      <fileset dir="java" casesensitive="no">
        <include name="tests/detailed/**"/>
        <include name="tests/simple/**"/>
        <exclude name="**/*.java"/>
      </fileset>
    </copy>
  </target>

  <target name="compile-tests" depends="compile">
    <javac encoding="UTF-8" nowarn="on" deprecation="off" debug="on" includeantruntime="false" destdir="${out.path}"
           fork="true" executable="${java.home}/bin/javac" memoryinitialsize="64m" memorymaximumsize="512m"
           release="17">
      <classpath location="${out.path}"/>
      <classpath refid="test.class.path"/>
      <src path="java/tests"/>
      <include name="junittests/**/*.java"/>
    </javac>
  </target>

  <target name="compile-all" depends="compile-samples,compile-tests"/>

  <target name="jar" depends="compile-all">
    <jar destfile="${out.path}/jcef.jar" index="true" update="false" manifest="java/manifest/MANIFEST.MF">
      <fileset dir="${out.path}">
        <include name="org/cef/**"/>
      </fileset>
    </jar>
    <jar destfile="${out.path}/jcef-tests.jar" index="true" update="false">
      <fileset dir="${out.path}">
        <include name="tests/**"/>
      </fileset>
    </jar>
  </target>

  <target name="bundle" depends="jar">
    <bundleapp outputdirectory="${out.path}"
                          name="${out.name}"
                   displayname="${out.name}"
                    identifier="${out.id}"
                 mainclassname="${out.mainclass}"
                          icon="third_party/cef/res/CefIcon.icns">
      <classpath dir="${out.path}">
        <include name="jcef.jar"/>
        <include name="jcef-tests.jar"/>
      </classpath>
      <classpath dir="third_party/jogamp/jar/">
        <include name="gluegen-rt.jar"/>
        <include name="gluegen-rt-natives-macosx-universal.jar"/>
        <include name="jogl-all.jar"/>
        <include name="jogl-all-natives-macosx-universal.jar"/>
      </classpath>
      <classpath dir="third_party/junit" includes="junit-platform-console-standalone-6.1.2.jar"/>
      <option value="-Djava.library.path=$APP_ROOT/Contents/Java/:$APP_ROOT/Contents/Frameworks/Chromium Embedded Framework.framework/Libraries"/>
      <option value="--add-opens=java.desktop/sun.awt=ALL-UNNAMED"/>
      <option value="--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED"/>
      <option value="--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED"/>
      <option value="--add-opens=java.desktop/java.awt=ALL-UNNAMED"/>
      <option value="--enable-native-access=ALL-UNNAMED"/>
    </bundleapp>
  </target>

  <target name="default" depends="jar"/>
</project>
